text not showing fixed

--- a/src/styles/receive.module.scss
+++ b/src/styles/receive.module.scss
@@ -61,6 +61,7 @@
     transition: 0.3s;
     color: #fff;
     text-align: center;
+    z-index: 1;
 }
 
 @keyframes card-animation {
